refactor: remove the logic that tries to be overly smart in determining the cluster API endpoint
instead let's use a static configuration on the tka server that is less
brittle and also serves cluster metadata.
Adding a tka command that can display the cluster information to a user
nicely.
